--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -47,7 +47,7 @@
         {% endif %}
 
     {% if post.excerpt and site.read_more != 'enabled' %}
-    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }} Recommended citation: {{ post.citation }}<br />(*denotes equal contribution)<br /><a href="{{ post.paperurl }}">Download Paper</a></p>
+    <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
     {% endif %}
@@ -55,7 +55,7 @@
     {% if post.citation and post.paperurl and post.slidesurl %}
       <p> Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}">Download Paper</a> | <a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% elsif post.citation and post.paperurl %}
-      <p>Recommended citation: {{ post.citation }}<br />(*denotes equal contribution)<br /><a href="{{ post.paperurl }}">Download Paper</a></p>
+      <p>Authors: {{ post.citation }}<br />(*denotes equal contribution)<br /><a href="{{ post.paperurl }}">Paper</a></p>
     {% elsif post.citation and post.slidesurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% elsif post.citation %}
