--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -27,7 +27,7 @@
     {% endif %}
 
     <h2 class="archive__item-title" itemprop="headline">
-        {{ title }}
+        <a href=" {{post.paperurl}} ">{{ title }} </a>
     </h2>
     
     {% if post.read_time %}
