--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,6 +38,19 @@
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in {{ post.venue }}, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        {% elsif post.collection == 'experiences' %}
+          div class="row">
+            <div class="col-md-3 col-md-offset-1">
+                <image src="images/CooperativeNavigation.png" class="img-responsive paper-img"
+                    alt="CN">
+            </div>
+            <div class="col-md-6">
+                <a href="https://www.ltimindtree.com">Mindtree Ltd.</a>
+                <br>
+                Nov 2017 - Aug 2022
+            </div>
+        </div>
+        <p>&nbsp;</p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
