--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,7 +38,7 @@
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'publications' %}
           <p>Published in {{ post.venue }}, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif post.collection == 'experience' %}
+        {% elsif post.collection == 'experiences' %}
           div class="row">
             <div class="col-md-3 col-md-offset-1">
                 <image src="images/CooperativeNavigation.png" class="img-responsive paper-img"
