--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -40,13 +40,8 @@
           <p>Published in {{ post.venue }}, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'experiences' %}
         <div class="row">
-            <div class="col-md-3 col-md-offset-1">
-                <image src="images/CooperativeNavigation.png" class="img-responsive paper-img"
-                    alt="CN">
-            </div>
+                <image src="images/ltimindtree.png" alt="CN">
             <div class="col-md-6">
-                <a href="https://www.ltimindtree.com">Mindtree Ltd.</a>
-                <br>
                 Nov 2017 - Aug 2022
             </div>
         </div>
