--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -39,13 +39,7 @@
         {% elsif post.collection == 'publications' %}
           <p>Published in {{ post.venue }}, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.collection == 'experiences' %}
-        <div class="row">
-                <image src="images/ltimindtree.png" alt="CN">
-            <div class="col-md-6">
-                Nov 2017 - Aug 2022
-            </div>
-        </div>
-        <p>&nbsp;</p>
+          <p> {{post.title}} <br/> {{post.description}} <br/>  {{post.start}} - {{post.end}} </p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
